--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Pull source
         uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
@@ -37,6 +39,8 @@ jobs:
     steps:
       - name: Pull source
         uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
 
       - if: matrix.targets != 'cuda'
         name: Set up Docker Buildx (max-parallelism=4)
@@ -57,7 +61,7 @@ jobs:
       - name: Build docker image
         uses: docker/bake-action@v6
         with:
-          files: docker-bake.hcl
+          source: .
           targets: ${{ matrix.targets }}
           push: true
         env:
