--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -9,8 +9,11 @@ jobs:
     name: binaries
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v5
+      - name: Pull source
+        uses: actions/checkout@v5
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
         with:
           go-version-file: ./go.mod
 
@@ -62,12 +65,14 @@ jobs:
     steps:
       - name: Pull source
         uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
       - name: Login to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -79,7 +84,7 @@ jobs:
         name: Build Docker image
         uses: docker/bake-action@v6
         with:
-          files: docker-bake.hcl
+          source: .
           targets: default
         env:
           VERSIONS: latest,${{ steps.get_version.outputs.major }}.${{ steps.get_version.outputs.minor }},${{ steps.get_version.outputs.version-without-v }}
@@ -88,7 +93,7 @@ jobs:
         name: Build prerelease Docker image
         uses: docker/bake-action@v6
         with:
-          files: docker-bake.hcl
+          source: .
           targets: default
           push: true
         env:
@@ -103,6 +108,8 @@ jobs:
     steps:
       - name: Pull source
         uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
 
       - id: get_version
         uses: battila7/get-version-action@v2
