--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -50,7 +50,7 @@ jobs:
         name: Set up Docker Buildx (max-parallelism=1)
         uses: docker/setup-buildx-action@v3
         with:
-          config: .github/buildkitd.toml
+          buildkitd-config: .github/buildkitd.toml
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
