--- a/config/config.toml
+++ b/config/config.toml
@@ -119,6 +119,13 @@ cache_expire = "72h"
 # The time-to-live (days) of active users, 0 means disabled. Recommendation won't be cached for inactive users. The default value is 0.
 active_user_ttl = 0
 
+# The fallback recommendation method is used when cached recommendation drained out:
+#   item_based: Recommend similar items to cold-start users.
+#   popular: Recommend popular items to cold-start users.
+#   latest: Recommend latest items to cold-start users.
+# Recommenders are used in order. The default values is ["latest"].
+fallback = ["item_based", "latest"]
+
 [recommend.data_source]
 
 # The feedback types for positive events.
@@ -235,7 +242,7 @@ positive_replacement_decay = 0.8
 # Decay the weights of replaced items from read feedbacks. The default value is 0.6.
 read_replacement_decay = 0.6
 
-[recommend.offline]
+[recommend.ranker]
 
 # The time period to check recommendation for users. The default values is 1m.
 check_recommend_period = "1m"
@@ -262,22 +269,10 @@ enable_collaborative_recommend = true
 # would be merged randomly. The default value is false.
 enable_click_through_prediction = true
 
-[recommend.offline.early_stopping]
+[recommend.ranker.early_stopping]
 
 # Number of epochs to wait if no improvement and then stop the training. The default value is 10.
 patience = 10
-
-[recommend.online]
-
-# The fallback recommendation method is used when cached recommendation drained out:
-#   item_based: Recommend similar items to cold-start users.
-#   popular: Recommend popular items to cold-start users.
-#   latest: Recommend latest items to cold-start users.
-# Recommenders are used in order. The default values is ["latest"].
-fallback_recommend = ["item_based", "latest"]
-
-# The number of feedback used in fallback item-based similar recommendation. The default values is 10.
-num_feedback_fallback_item_based = 10
 
 [tracing]
 
