--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,6 +16,7 @@
       "ghcr.io/devcontainers/features/docker-in-docker": {
         "moby": false
       },
-      "ghcr.io/devcontainers/features/go": {}
+      "ghcr.io/devcontainers/features/go": {},
+      "ghcr.io/devcontainers-extra/features/protoc": {}
     }
 }
