--- a/config/config.toml
+++ b/config/config.toml
@@ -133,11 +133,6 @@ positive_feedback_ttl = 0
 # The time-to-live (days) of items, 0 means disabled. The default value is 0.
 item_ttl = 0
 
-[recommend.popular]
-
-# The time window of popular items. The default values is 4320h.
-popular_window = "720h"
-
 [[recommend.non-personalized]]
 
 # The name of the leaderboard.
@@ -246,8 +241,7 @@ refresh_recommend_period = "24h"
 # Enable latest recommendation during offline recommendation. The default value is false.
 enable_latest_recommend = true
 
-# Enable popular recommendation during offline recommendation. The default value is false.
-enable_popular_recommend = false
+
 
 # Enable user-based similarity recommendation during offline recommendation. The default value is false.
 enable_user_based_recommend = true
@@ -262,11 +256,10 @@ enable_collaborative_recommend = true
 # would be merged randomly. The default value is false.
 enable_click_through_prediction = true
 
-# The explore recommendation method is used to inject popular items or latest items into recommended result:
-#   popular: Recommend popular items to cold-start users.
+# The explore recommendation method is used to inject latest items into recommended result:
 #   latest: Recommend latest items to cold-start users.
-# The default values is { popular = 0.0, latest = 0.0 }.
-explore_recommend = { popular = 0.1, latest = 0.2 }
+# The default values is { latest = 0.0 }.
+explore_recommend = { latest = 0.2 }
 
 [recommend.offline.early_stopping]
 
