--- a/config/config.toml
+++ b/config/config.toml
@@ -116,6 +116,11 @@ cache_size = 100
 # Recommended cache expire time. The default value is 72h.
 cache_expire = "72h"
 
+# The context size for online recommendations. Online recommendations can't use all user feedbacks to generate
+# recommendations for efficiency consideration. Instead, only the latest `context_size` feedbacks are used.
+# The default value is 100.
+context_size = 100
+
 # The time-to-live (days) of active users, 0 means disabled. Recommendation won't be cached for inactive users. The default value is 0.
 active_user_ttl = 0
 
@@ -230,7 +235,7 @@ positive_replacement_decay = 0.8
 # Decay the weights of replaced items from read feedbacks. The default value is 0.6.
 read_replacement_decay = 0.6
 
-[recommend.offline]
+[recommend.ranker]
 
 # The time period to check recommendation for users. The default values is 1m.
 check_recommend_period = "1m"
@@ -240,8 +245,6 @@ refresh_recommend_period = "24h"
 
 # Enable latest recommendation during offline recommendation. The default value is false.
 enable_latest_recommend = true
-
-
 
 # Enable user-based similarity recommendation during offline recommendation. The default value is false.
 enable_user_based_recommend = true
@@ -256,27 +259,15 @@ enable_collaborative_recommend = true
 # would be merged randomly. The default value is false.
 enable_click_through_prediction = true
 
-# The explore recommendation method is used to inject latest items into recommended result:
-#   latest: Recommend latest items to cold-start users.
-# The default values is { latest = 0.0 }.
-explore_recommend = { latest = 0.2 }
-
-[recommend.offline.early_stopping]
+[recommend.ranker.early_stopping]
 
 # Number of epochs to wait if no improvement and then stop the training. The default value is 10.
 patience = 10
 
-[recommend.online]
+[recommend.fallback]
 
-# The fallback recommendation method is used when cached recommendation drained out:
-#   item_based: Recommend similar items to cold-start users.
-#   popular: Recommend popular items to cold-start users.
-#   latest: Recommend latest items to cold-start users.
-# Recommenders are used in order. The default values is ["latest"].
-fallback_recommend = ["item_based", "latest"]
-
-# The number of feedback used in fallback item-based similar recommendation. The default values is 10.
-num_feedback_fallback_item_based = 10
+# The fallback recommenders are used when cached recommendation drained out. The default values is ["latest"].
+recommenders = ["item-to-item/neighbors", "latest"]
 
 [tracing]
 
