--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -43,6 +43,10 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          buildkitd-config-inline: |
+            [worker.oci]
+              max-parallelism = 1
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
