--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -34,7 +34,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        targets: [default, mkl]
+        targets: [default]
     steps:
       - name: Pull source
         uses: actions/checkout@v5
@@ -43,10 +43,6 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-        with:
-          buildkitd-config-inline: |
-            [worker.oci]
-              max-parallelism = 1
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
