--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -215,7 +215,12 @@ jobs:
         variables: |
           database=${{ matrix.database }}
 
-    - name: Setup and start Gorse
+    - name: Build the stack
+      run: docker compose -f client/docker-compose.yml --project-directory . up -d
+      env:
+        DOCKER_BUILDKIT: 1
+
+    - name: Setup test
       working-directory: ./client
       run: ./setup-test.sh
       env:
