ci: wait for recommendations (#1107)

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -197,7 +197,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        database: [mysql, postgres, mongo, sqlite, clickhouse+redis]
+        database: [mysql, postgres, mongo, sqlite]
     steps:
     - uses: actions/checkout@v5
       with:
@@ -210,33 +210,15 @@ jobs:
     - uses: cuchi/jinja2-action@v1.2.0
       with:
         template: client/docker-compose.yml.j2
-        output_file: client/docker-compose.yml
+        output_file: docker-compose.yml
         strict: true
         variables: |
           database=${{ matrix.database }}
 
-    - name: Build the stack
-      run: docker compose -f client/docker-compose.yml --project-directory . up -d
+    - name: Setup test
+      run: ./client/setup-test.sh
       env:
         DOCKER_BUILDKIT: 1
-
-    - name: Check the deployed service URL
-      uses: jtalk/url-health-check-action@v4
-      with:
-        # Check the following URLs one by one sequentially
-        url: http://127.0.0.1:8088/api/health/ready|http://127.0.0.1:8087/api/health/ready
-        # Fail this action after this many failed attempts
-        max-attempts: 5
-        # Delay between retries
-        retry-delay: 5s
-        # Retry all errors, including 404. This option might trigger curl upgrade.
-        retry-all: true
-
-    - name: Download and import dataset
-      run: |
-        wget https://cdn.gorse.io/example/ml-100k.bin.gz
-        gzip -d ml-100k.bin.gz
-        curl -X POST --data-binary @ml-100k.bin http://localhost:8088/api/restore
 
     - name: Test
       run: go test ./client/
