blob: support Google Cloud Storage

--- a/storage/docker-compose.yml
+++ b/storage/docker-compose.yml
@@ -35,3 +35,17 @@ services:
     image: clickhouse/clickhouse-server:23
     ports:
       - 8123:8123
+  
+  rustfs:
+    image: rustfs/rustfs:alpha
+    ports:
+      - 9000:9000
+    environment:
+      RUSTFS_ACCESS_KEY: rustfsadmin
+      RUSTFS_SECRET_KEY: rustfsadmin
+
+  gcs:
+    image: fsouza/fake-gcs-server
+    ports:
+      - 5050:5050
+    command: ["-scheme", "http", "-port", "5050", "-public-host", "localhost:5050"]
