--- a/config/config.toml
+++ b/config/config.toml
@@ -229,14 +229,23 @@ read_replacement_decay = 0.6
 #   fm: factorization machines.
 type = "fm"
 
-# The time period to check recommendation for users. The default values is 1m.
-check_recommend_period = "1m"
-
 # The time period to refresh recommendation for inactive users. The default values is 120h.
-refresh_recommend_period = "24h"
+cache_expire = "24h"
 
 # The recommenders used to fetch candidate items before ranking. The default values is all recommenders.
 recommenders = ["latest", "collaborative", "non-personalized/most_starred_weekly", "item-to-item/neighbors", "user-to-user/neighbors"]
+
+# The time period for model fitting. The default value is "60m".
+fit_period = "60m"
+
+# The number of epochs for model fitting. The default value is 100.
+fit_epoch = 100
+
+# The time period for hyperparameter optimization. The default value is "360m".
+optimize_period = "360m"
+
+# The number of trials for hyperparameter optimization. The default value is 10.
+optimize_trials = 10
 
 [recommend.ranker.early_stopping]
 
